--- a/method_C/11.1_colocalisation_table.Rmd
+++ b/method_C/11.1_colocalisation_table.Rmd
@@ -44,6 +44,7 @@ coloc.df <- rbind(sub1,sub2)
 
 
 write.dir <- "/home/jason/science/projects/t2d_classification/method_C/analysis_files/"
+write.table(coloc.df,file=work.dir%&%"analysis_files/colocalize.txt",sep="\t",quote=F,row.names=F,col.names=T)
 
 ```
 
@@ -463,6 +464,7 @@ candu.df$maxsnpcoloc  <- map(1:dim(candu.df)[1],function(i){
 make_table_plot_filtered <- function(cand.df){
   
   full.df <- filter(cand.df) #%>% arrange(.,desc(coding),desc(maxppa))
+  full.df$Number <- 1:dim(full.df)[1]
   full.df$eGene[is.na(full.df$eGene)] <- ""
   full.df$CLPP[is.na(full.df$CLPP)] <- ""
   plot.df <- dplyr::select(full.df,
@@ -537,7 +539,7 @@ ggsave(plot=grob3b,filename=plot.dir %&%
 Chunk the table 
 
 ```{r}
-Number <- 1:101
+#Number <- 1:101
 s1 <- filter(candw.df,maxppa>=0.5) %>% arrange(.,desc(maxppa))
 s1 <- cbind(Number,s1)
 
@@ -551,10 +553,21 @@ grobC <- make_table_plot_filtered(s1[67:101,])
 ggsave(plot=grobC,filename=plot.dir %&%
          "filtered-table_weighted_maxppa50-C.png",height=20,width=20)
 
+```
 
+
+Subsetted to coloc results 
+
+```{r}
+
+ssub <- filter(candw.df,maxppa>=0.5,coloc==TRUE,CLPP>0.1) %>% arrange(.,desc(maxppa))
+grobsub <- make_table_plot_filtered(ssub)
+ggsave(plot=grobsub,filename=plot.dir %&%
+         "filtered-table_weighted_maxppa50-sub.png",height=20,width=20)
 
 
 ```
+
 
 
 
