--- a/revamp/00.01_partition_states_updated.Rmd
+++ b/revamp/00.01_partition_states_updated.Rmd
@@ -17,10 +17,13 @@ library("tidyverse")
 library("data.table")
 library("GenomicRanges")
 
-serv.dir <- "/Users/jtorres/FUSE/"
+serv0.dir <- "/home/jason/science/servers/FUSE/"
+serv.dir <- "/home/jason/science/servers/FUSE5/"
+proj.dir <- serv.dir %&% "projects/t2d_classification/"
+write.dir <- proj.dir %&% "revamp/"
 
-bed.dir <- serv.dir %&% "reference/chromatin_segmentation/varshney_2016/chromatin_states/" 
-work.dir <- bed.dir %&% "partitioned_updated/"
+bed.dir <- serv0.dir %&% "reference/chromatin_segmentation/varshney_2016/chromatin_states/" 
+write.dir <- write.dir %&% "analysis_files/partitioned/"
 
 
 ```
@@ -128,53 +131,47 @@ partition_split <- function(query.vec = strong.enhancers, key.term = "strong_enh
   
   # Tissue-specific annotations 
   annot.name <- "islet_specific_" %&% key.term
-  out.df1 <- gr_to_df(isl.spec); out.df1$name <- annot.name ; write.table(out.df1,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
+  out.df1 <- gr_to_df(isl.spec); out.df1$name <- annot.name ; write.table(out.df1,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
   annot.name <- "adipose_specific_" %&% key.term
-  out.df2 <- gr_to_df(adi.spec); out.df2$name <- annot.name; write.table(out.df2,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
+  out.df2 <- gr_to_df(adi.spec); out.df2$name <- annot.name; write.table(out.df2,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
   annot.name <- "muscle_specific_" %&% key.term 
-  out.df3 <- gr_to_df(mus.spec); out.df3$name <- annot.name; write.table(out.df3,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
+  out.df3 <- gr_to_df(mus.spec); out.df3$name <- annot.name; write.table(out.df3,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
   annot.name <- "liver_specific_" %&% key.term 
-  out.df4 <- gr_to_df(liv.spec); out.df4$name <- annot.name; write.table(out.df4,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
+  out.df4 <- gr_to_df(liv.spec); out.df4$name <- annot.name; write.table(out.df4,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
   
   # Shared annotations 
   annot.name <- "islet_shared_" %&% key.term
-  out.df5 <- gr_to_df(islet.shared); out.df5$name <- annot.name; write.table(out.df5,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
+  out.df5 <- gr_to_df(islet.shared); out.df5$name <- annot.name; write.table(out.df5,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
   annot.name <- "irpt_shared_" %&% key.term
-  out.df6 <- gr_to_df(irpt.shared); out.df6$name <- annot.name; write.table(out.df6,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
+  out.df6 <- gr_to_df(irpt.shared); out.df6$name <- annot.name; write.table(out.df6,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)
   annot.name <- "all_shared_" %&% key.term
-  out.df7 <- gr_to_df(shared.all); out.df7$name <- annot.name; write.table(out.df7,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)  
+  out.df7 <- gr_to_df(shared.all); out.df7$name <- annot.name; write.table(out.df7,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)  
   fgwas.out.df <- bind_rows(out.df1,out.df2,out.df3,out.df4,out.df5,out.df6,out.df7)
   
   # Save shared subset files for future reference 
   # shared.islet.adipose.muscle, shared.islet.adipose.liver, shared.adipose.muscle.liver, shared.islet.adipose, shared.islet.muscle, shared.islet.liver, shared.adipose.muscle, shared.adipose.liver, shared.muscle.liver
   annot.name <- "shared.islet.adipose.muscle." %&% key.term
-  out.df <- gr_to_df(shared.islet.adipose.muscle); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)  
+  out.df <- gr_to_df(shared.islet.adipose.muscle); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)  
   annot.name <- "shared.islet.adipose.liver." %&% key.term
-  out.df <- gr_to_df(shared.islet.adipose.liver); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)    
+  out.df <- gr_to_df(shared.islet.adipose.liver); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)    
   annot.name <- "shared.adipose.muscle.liver." %&% key.term
-  out.df <- gr_to_df(shared.adipose.muscle.liver); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)   
+  out.df <- gr_to_df(shared.adipose.muscle.liver); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)   
   annot.name <- "shared.islet.adipose." %&% key.term
-  out.df <- gr_to_df(shared.islet.adipose); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)   
+  out.df <- gr_to_df(shared.islet.adipose); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)   
   annot.name <- "shared.islet.muscle." %&% key.term
-  out.df <- gr_to_df(shared.islet.muscle); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
+  out.df <- gr_to_df(shared.islet.muscle); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
   annot.name <- "shared.islet.liver." %&% key.term
-  out.df <- gr_to_df(shared.islet.liver); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
+  out.df <- gr_to_df(shared.islet.liver); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
   annot.name <- "shared.adipose.muscle." %&% key.term
-  out.df <- gr_to_df(shared.adipose.muscle); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
+  out.df <- gr_to_df(shared.adipose.muscle); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
   annot.name <- "shared.adipose.liver." %&% key.term
-  out.df <- gr_to_df(shared.adipose.liver); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
+  out.df <- gr_to_df(shared.adipose.liver); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
   annot.name <- "shared.muscle.liver." %&% key.term
-  out.df <- gr_to_df(shared.muscle.liver); out.df$name <- annot.name; write.table(out.df,file=work.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
+  out.df <- gr_to_df(shared.muscle.liver); out.df$name <- annot.name; write.table(out.df,file=write.dir%&%annot.name%&%".bed",sep="\t",quote=F,row.names=F,col.names=F)      
   return(fgwas.out.df)
 }
 
-#check.gr
-#GRanges object with 1 range and 0 metadata columns:
-#      seqnames                 ranges strand
-#         <Rle>              <IRanges>  <Rle>
-#  [1]     chr1 [214150821, 214150821]      *
-#  -------
-#  seqinfo: 1 sequence from an unspecified genome; no seqlengths
+
 
 ```
 
@@ -185,26 +182,33 @@ write bed files
 strong.enhancers <- c("9_Active_enhancer_1","10_Active_enhancer_2")
 weak.enhancers <- c("11_Weak_enhancer")
 repressed.regions <- c("16_Repressed_polycomb", "17_Weak_repressed_polycomb")
-promoters <- c("1_Active_TSS","2_Weak_TSS","3_Flanking_TSS")
-gene.transcription <- c("5_Strong_transcription","6_Weak_transcription")
+strong.promoter <- c("1_Active_TSS")
+weak.promoter <- c("2_Weak_TSS")
+flank.promoter <- c("3_Flanking_TSS")
+strong.gene.transcription <- c("5_Strong_transcription")
+weak.gene.transcription <- c("6_Weak_transcription")
 bivalent.tss <- c("14_Bivalent_poised_TSS")
 genic.enhancer <- c("8_Genic_enhancer")
 low.signal <- c("18_Quiescent_low_signal")
+coding <- c("coding")
 
 df1 <- partition_split(strong.enhancers,key.term="strong_enhancer")
 df2 <- partition_split(weak.enhancers,key.term="weak_enhancer")
 df3 <- partition_split(repressed.regions,key.term="repressed")
-df4 <- partition_split(promoters,key.term="promoter")
-df5 <- partition_split(gene.transcription,key.term="gene_transcription")
-df6 <- partition_split(bivalent.tss,key.term="bivalent_tss")
-df7 <- partition_split(genic.enhancer,key.term="genic_enhancer")
-df8 <- partition_split(genic.enhancer,key.term="low_signal")
+df4 <- partition_split(strong.promoter,key.term="strong_promoter")
+df5 <- partition_split(weak.promoter,key.term="weak_promoter")
+df6 <- partition_split(flank.promoter,key.term="flank_promoter")
+df7 <- partition_split(strong.gene.transcription,key.term="strong_gene_transcription")
+df8 <- partition_split(weak.gene.transcription,key.term="weak_gene_transcription")
+df9 <- partition_split(bivalent.tss,key.term="bivalent_tss")
+df10 <- partition_split(genic.enhancer,key.term="genic_enhancer")
+df11 <- partition_split(low.signal,key.term="low_signal")
 
-bed.df <- bind_rows(df1,df2,df3,df4,df5,df6,df7,df8)
+bed.df <- bind_rows(df1,df2,df3,df4,df5,df6,df7,df8,df9,df10,df11)
 
 bed.df$num <- as.integer(gsub("chr","",bed.df$chr)) 
 bed.df <- bed.df %>% arrange(chr,start) %>% dplyr::select(one_of("chr","start","end","name"))
-write.table(bed.df,file=work.dir%&%"complete_isl-adi-mus-liv.partitioned_updated.bed",quote=F,sep="\t",row.names=F,col.names=F)
+write.table(bed.df,file=write.dir%&%"complete_isl-adi-mus-liv.partitioned_updated.bed",quote=F,sep="\t",row.names=F,col.names=F)
 
 
 ```
