--- a/revamp/03_classify-loci.Rmd
+++ b/revamp/03_classify-loci.Rmd
@@ -19,11 +19,12 @@ library("Homo.sapiens")
 fuse.path <- "/home/jason/science/servers/"
 serv.dir <- fuse.path %&% "FUSE5/"
 proj.dir <- serv.dir %&% "projects/t2d_classification/"
-work.dir <- proj.dir %&% "method_C/"
+work.dir <- proj.dir %&% "revamp/"
 analysis.dir <- work.dir %&% "analysis_files/"
 plot.dir <- work.dir %&% "plots/"
 
 cred.df <- fread(work.dir %&% "genetic_credible_sets/gencred.txt")
+cred.df$Locus.ID <- cred.df$CondID
 
 enrich.dir <- work.dir %&% "enrichment_files/"
 
@@ -36,7 +37,7 @@ enrich.dir <- work.dir %&% "enrichment_files/"
 #keep.vec <- keep.df$Locus.ID_inCREDS
 
 weighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-weighted-unscaled.txt")
-unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled.txt")
+#unweighted.df <- fread(analysis.dir %&% "tissue_ppa_divvy-full-unweighted-unscaled.txt")
 #alt.df <- fread(analysis.dir %&% "tissue-scores-alternative_CodingNotRN.txt") #%>% 
   #filter(.,Locus.ID %in% keep.vec) 
 
@@ -74,7 +75,7 @@ build_classify_df <- function(ppa.df){
   symbol <- map(1:dim(ppa.df)[1],function(i){
     setTxtProgressBar(pb,i)
     loc.id <- ppa.df$Locus.ID[i]
-    filter(cred.df,Locus.ID==loc.id)$symbol %>% unique(.)
+    filter(cred.df,CondID==loc.id)$symbol %>% unique(.)
   }) %>% as.character(.)
   out.df <- cbind(ppa.df,assigned_00,assigned_20,assigned_50,assigned_80,symbol)
   out.df$assigned_00 <- as.character(out.df$assigned_00)
@@ -94,7 +95,7 @@ make_bed_df <- function(prebed,tname){
   return(out.df)
 }
 
-save_classifed_snp_bedfiles <- function(class.df,cred.df,type.name="unweighted"){
+save_classifed_snp_bedfiles <- function(class.df,cred.df,type.name="weighted"){
   cred.df <- filter(cred.df,PPA>=0.01)
   df <- filter(cred.df,Locus.ID %in% (filter(class.df,assigned_20=="islet")$Locus.ID)) %>% make_bed_df(.,"islet")
   write.table(df,file=enrich.dir %&% type.name %&% "/" %&%type.name%&%"_islet_"%&%"thresh20.txt",sep="\t",quote=F,row.names=F,col.names=F)
@@ -141,14 +142,14 @@ save_classifed_snp_bedfiles <- function(class.df,cred.df,type.name="unweighted")
 ```{r}
 
 
-df1 <- build_classify_df(unweighted.df)
+##df1 <- build_classify_df(unweighted.df)
 df2 <- build_classify_df(weighted.df)
 #df3 <- build_classify_df(alt.df)
 
 
-write.table(x=df1,file=analysis.dir%&%"classified-loci_unweighted.txt",
-            sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
-save_classifed_snp_bedfiles(df1,cred.df,type.name="unweighted")
+##write.table(x=df1,file=analysis.dir%&%"classified-loci_unweighted.txt",
+##            sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
+##save_classifed_snp_bedfiles(df1,cred.df,type.name="unweighted")
 
 write.table(x=df2,file=analysis.dir%&%"classified-loci_weighted.txt",
             sep="\t",quote=F,row.names=FALSE,col.names=TRUE)
