--- a/revamp/05_V_atac_downsample.Rmd
+++ b/revamp/05_V_atac_downsample.Rmd
@@ -28,7 +28,7 @@ serv.dir1 <- "/home/jason/science/servers/FUSE/"
 serv.dir2 <- "/home/jason/science/servers/FUSE5/"
 
 proj.dir <- serv.dir2 %&% "projects/t2d_classification/"
-work.dir <- proj.dir %&% "method_C/"
+work.dir <- proj.dir %&% "revamp/"
 
 isl.atac <- fread(work.dir %&% "enrichment_files/islet.hg19.bed") 
 adi.atac <- fread(work.dir %&% "enrichment_files/adipose.hg19.bed") 
